wp-content/themes/sixgill/css/custom_2016.css
/* ----------------------------------------------------------------
	Custom CSS

	Add all your Custom Styled CSS here for New Styles or
	Overwriting Default Theme Styles for Better Hanlding Updates
-----------------------------------------------------------------*/


/* TD - 2016 - 04 - 19

all classes apply for desktop


*/

/* Solutions Page classes */

.my_titSolutions {
	font-family: "Lato", serif, sans-serif;
	font-size:30px;
	font-weight:bold;
	text-transform:uppercase;
	color:#0051C6;
	text-align:right;
	padding-right:30px;
	margin-right:0px;
}

.my_txtSolutions, .my_txtSolutions_noline {
	border-left:1px solid #9C9C9C;
	padding-left:30px;
	text-align:left;
	font-size:15px;
	color:#686868;
}

.my_txtSolutions_noline {border-left:0px;}


.my_iconSolution {width:135px;}
.my_boxSolution_title {
	font-family: "Lato", serif, sans-serif;
	font-size:27px;
	font-weight:bolder;
	text-transform:uppercase;
	color:#000;
	border:4px solid #000000;
	padding:10px 20px;
	text-align:center;
	margin-bottom:35px;
}

.my_txtSolution { border:0px solid #FF0004;}


.my_containerSolution {
	max-width:950px;
	padding-top:75px;
	margin-top:0px;
	margin-bottom:0px;
	padding-bottom:0px;
	border:0px solid #FE0004;
}

.footer_Learn, .footer_Links {
	text-align:left;
	border:0px solid #FE0004;
	color:#FFF;
	font-size:20px;
	margin-top:12px;
	font-weight:normal;
	padding:0px 20px;
}

.footer_Links {text-decoration:none; font-size: 14px;	color:#FFF;}
.footer_Links a {
	margin: 0 10px;
	color: #FFF;
	border-bottom: 0px;
}
.footer_Links a:hover {	color: #CCC;}


.footer_Schedule, .footer_Copy {
	text-align:right;
	border:0px solid #FE0004;
	color:#FFF;
	font-size:20px;
	margin-top:12px;
	font-weight:normal;
	padding:0px 20px;
}
.footer_Copy {font-size: 14px;	color:#FFF;}

.my_headerBoxSolution { margin-bottom: 30px; }

.hr-home-sub-title {
	max-width: 650px;
}

.hr-home-sup-title {
	margin-top:-0.8em;
	max-width: 650px;
}

.home-diagram {
	padding:85px 50px 45px 50px;
}

#products {
	background-image: url('/wp-content/themes/sixgill/images/td/home/00_BlueShape.jpg');
	background-size:cover;
	height:171px;
}

.applying-layer-copperOnVideo {
    background-color: rgba(0,0,0,0.45);
}

.press-date, .press-by-author, .press-title, .press-subtitle {
	font-family: "Lato", serif, sans-serif;
}

.no-bottom-margin {
	margin-bottom: 0px;
}

.press-title, .press-subtitle {
	color: white;
}

.press-by-author {
	color: #999999;
}

.press-title {
	margin-bottom: 0px;
}

.blog-post-preview-header {
	font-size: 16px;
}

.blog-post-title {
	font-size: 24px;
	font-weight: bold;
	color: #2e2e2e;
}

.blog-post-suptitle {
	font-weight: bold;
	margin-bottom: 0px;
	color: #b8b8b8;
	line-height: 1em !important;
}

.blog-container {
	padding-top: 0px;
	margin-left: 5%;
	margin-top: 40px;
	margin-right: 10%;
	max-width: none;
}

.widget_mc4wp_form_widget {
	margin-top: 10px;
}

.subscribe-block-tablet-mobile {
	background-color: #f0f0f0;
	width: 100%;
}

.subscribe-success-icon {
	background-image: url('/wp-content/themes/sixgill/images/td/blog/subscribe_success.svg');
	width: 100%;
	height: 64px;
	display: block;
	background-position: center center;
	background-repeat: no-repeat;
	display: block;
	margin-bottom: 20px;
	margin-top: 10px;
}

.subscribe-row {
	display: table;
	width: 100%;
	padding-top: 20px;
}

.subscribe-element {
	display: table-cell;
	vertical-align: middle;
}
.subscribe-input-container {
	width:100%;
}

.blog-list {
	padding-bottom: 0px;
	width: 100%;
	padding-right: 5px;
}

@media only screen and (min-width : 992px) {/* For desktop: */

	.post-by-author {

	}

	.subscribe-element {
		display: block;
	}

	.blog-container {
		margin-right: 0px;
	}

	.subscribe-block-tablet-mobile {
		display: none;
	}

	.subscribe-block {
		background-color: #fafafa;
		height: 250px;
		max-width: 350px;
		padding: 15px 20px 26px 20px;
		text-align: center;
		font-size: 18px;
		width: 30%
	}

	.subscribe-block h4 {
		font-size: 26px;
		font-weight: bold;
		margin-bottom: 0px;
	}

	.subscribe-email {
		height: 51px;
		margin-bottom: 10px;
		margin-top: 5px;
		text-align: center;
		width: 100%;
	}

	.subscribe-button {
		background-image: url('/wp-content/themes/sixgill/images/td/blog/subscribe_desktop.png');
		max-width: 311px;
		height: 45px;
		width: 100%;
		background-position: center center;
	}

	.mc4wp-success > p {
		font-size: 20px !important;
		color: #999999;
		line-height: 1.5em !important;
	}

	.subscribe-success-title {
		font-size: 24px;
		color: #2e2e2e;
		display: block;
	}

	.slider-caption.slider-caption-center {
		max-width: 900px;
	}

	.slider-caption p {
		margin-bottom: 10px;
		font-size: 36px;
		font-family: "Lato";
		margin-top: 10px;
	}

	.applying-layer-copperOnVideo {
		background-color: rgba(0,0,0,0);
	}

	.backgroundForTextVideoHome {
		background-image:url(/wp-content/themes/sixgill/images/td/home/shadow.png);
		padding: 85px 30px 50px 30px;
		height:380px;
	}

	.sizeForTextVideoHome {
		font-size: 34px;
		font-weight: 900;
	}

	.hidden-bottom-imageDiagram {
		display: none;
	}

	.logoSIXGILL {
		width:140px;
		height:111px;
		background-image:url("/wp-content/themes/sixgill/images/td/logo/logo_desktop.svg");
	}

	.my_titSolutions {
		font-size:30px;
		padding-right:20px;
		text-align:right;
	}

	.my_iconSolution {
		width:115px;
	}

	.my_boxSolution_title {
		display: none;
	}

	.footer_Learn, .footer_Links {
		text-align:left;
		font-size:22px;
	}

	.footer_Schedule {
		text-align:right;
	}

	.home-text-2{
		margin-top:120px;
	}

	.homeSupTit-with-line {
		background-color: #fff;
		z-index:2;
	}

	.widgettitle {
		color: #004FC8;
	}

	.blog-list {
		padding-bottom:55px;
		width: 65%;
	}

}

@media (min-width: 500px) and (max-width: 991px) {/* For tablets: */

	section {
		margin-top: -1px;
	}

	.homeSupTit-with-line {
		background-color: #fff;
		z-index:2;
	}

	.hidden-top-imageDiagram {
		display: none;
	}

	.hidden-press-contact {
		display: none;
	}

	.home-diagram {
		padding: 0px 50px 45px 50px;
	}

	.headerBoxSolutionSize {
		display: none;
	}

	.logoSIXGILL {
		width:245px;
		height:96px;
		background-image:url("/wp-content/themes/sixgill/images/td/logo/logo_tablet.svg");
	}

	.my_subMenus {
		display:none;
	}

	.my_titSolutions {
		font-size:28px;
		padding-right:10px;
	}

	.my_txtSolutions_noline {
		padding-right:30px;
	}

	.my_txtSolutions {
		border: 0px;
	}

	.my_titSolutions {
		padding-left: 30px;
	}

	.my_iconSolution {
		width:115px;
	}

	.my_boxSolution_title {}

	.footer_Learn, .footer_Links {
		text-align:left;
		font-size:22px;
		font-weight:normal;
	}

	.footer_Schedule {
		text-align:right;
	}

	.my_titSolutions {
		text-align:left;
	}

	.home-text-2{
		margin-top:110px;
	}

	.homeSupTit-with-line {
		background-color: #fff;
		z-index:2;
	}

	.home-diagram {
		padding-left: 0px;
		padding-right: 0px;
	}

	.widgettitle {
		color: #444;
	}

	.subscribe-block-tablet-mobile {
		padding: 55px 60px 20px 98px;
		margin: 0px auto;
		height: 195px;
		width: 100%;
		text-align: center;
		font-size: 18px;
	}

	.subscribe-block-tablet-mobile  h4 {
		display: none;
	}

	.subscribe-input-container {
		overflow: hidden;
		width: 100%;
		padding-right: 15px;
		padding-left: 10px;
	}

	.subscribe-email {
		height: 49px;
		margin-bottom: 10px;
		margin-top: 10px;
		text-align: center;
		width: 100%;
	}

	.subscribe-button {
		background-image: url('/wp-content/themes/sixgill/images/td/blog/subscribe_tablet.png');
		width: 261px;
		height: 49px;
		margin-top: 2px;
	}

	.mc4wp-success > p {
		font-size: 20px !important;
		color: #2e2e2e;
		line-height: 1.5em !important;
	}

	.subscribe-success-title {
		display:none;
	}

	.subscribe-success-icon {
		margin-top: 0px;
	}
}

@media only screen and (max-width: 500px) {/* For mobiles: */

	.hidden-press-contact {
		display: none;
	}

	.homeSupTit-with-line {
		background-color: #fff;
		z-index:2;
	}

	.hidden-top-imageDiagram {
		display: none;
	}

	.home-diagram {
		padding: 0px 50px 45px 50px;
	}

	.my_headerBoxSolution {
		display: none;
	}

	.logoSIXGILL {
		width:150px;
		height:44px;
		background-image:url("/wp-content/themes/sixgill/images/td/logo/logo_mobile.svg");
	}

	.my_subMenus {
		display:none;
	}

	.my_titSolutions {
		font-size:30px;
		font-weight:bold;
		padding:0px;
	}

	.my_txtSolutions {
		border-left:0px;
		padding-left:10px;
	}

	.my_iconSolution {
		width:55px;
	}

	.my_boxSolution_title {
		border:0px;
	}

	.footer_Learn, .footer_Links {
		text-align:center;
		font-size:14px;
	}

	.footer_Schedule, .footer_Copy {
		text-align:center;
	}

	.my_titSolutions {
		text-align:center;
	}

	.home-text-2{
		margin-top:60px;
	}

	.my_boxSolution_title {
		padding-left: 0px;
	}

	.home-diagram {
		padding-left: 0px;
		padding-right: 0px;
	}

	.home3Tit_SixGill {
		font-size:16px;
		color:#FFF;
		text-align:center;
		padding-top:0.5em;
		padding-bottom: 0.5em;
		padding-left: 0.3em;
		padding-right: 0.3em;
	}

	#products {
		height: auto;
	}

	.press-post-title {
		color: #444;
	}

	.widgettitle {
		color: #444;
	}

	.news-press-button {
		width: 300px;
	}

	.news-press-button {
		font-size: 12px !important;
	}

	.company-press-title {
		font-size: 14px !important;
	}

	.subscribe-block-tablet-mobile {
		padding: 15px 18px 25px 19px;
		margin: 0px auto;
		height: 210px;
		width: 100%;
		text-align: center;
		font-size: 18px;
	}

	.subscribe-block-tablet-mobile  h4 {
		display: none;
	}

	.subscribe-input-container {
		overflow: hidden;
		width: 100%;
		padding-right: 0px;
	}

	.subscribe-email {
		height: 49px;
		margin-bottom: 10px;
		margin-top: 10px;
		text-align: center;
		width: 280px;
	}

	.subscribe-button {
		background-image: url('/wp-content/themes/sixgill/images/td/blog/subscribe_mobile.png');
		width: 280px;
		height: 49px;
		margin-top: 2px;
	}

	.mc4wp-success > p {
		font-size: 20px !important;
		color: #2e2e2e;
		line-height: 1.5em !important;
	}

	.subscribe-success-title {
		display:none;
	}

	.subscribe-success-icon {
		margin-top: 0px;
	}

	.subscribe-element {
		display: block;
	}
}

